--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
+* {
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  display: none !important;
+}
+::-webkit-scrollbar-thumb {
+  display: none;
+}
+::-webkit-scrollbar-track {
+  display: none;
+}
+.f-abril {
+  font-family: "Abril Fatface", cursive !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.f-ssp {
+  font-family: "Source Serif Pro", serif !important;
+}
+
+.underline-hover {
+  transition: all 0.35s linear;
+  background: linear-gradient(0deg, blue, green 40%, red);
+  background-size: 0px 2px;
+  background-repeat: no-repeat;
+  background-position: left 100%;
+  display: inline;
+}
+.underline-hover:hover {
+  background-size: 100% 2px;
+}
+
+.pageLoadAnimation {
+  animation: load 2s ease;
+}
+
+@keyframes load {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+::-moz-selection {
+  /* Code for Firefox */
+  color: white;
+  background: black;
+}
+
+::selection {
+  color: white;
+  background: black;
+}
+
+/* Custom Hover Effect */
+.onAirEffect {
+  position: relative;
+  transition: 0.3s;
+  transform: perspective(1000px) rotateX(35deg) rotateY(4deg) rotateZ(-30deg);
+  animation: float 10s linear infinite;
+}
+
+.onAirEffect:hover {
+  transform: perspective(1000px) rotateX(0deg) rotateY(0deg) rotateZ(0deg)
+    scale(1.2);
+  z-index: 9999;
+  animation: unset;
+}
+.onAirEffect:hover::after {
+  top: -20px;
+  left: 20px;
+}
+.onAirEffect::after {
+  position: absolute;
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 80%;
+  background: #000;
+  top: 0;
+  left: 0;
+  transition: 0.3s;
+  z-index: -3;
 }
